--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "tinylink",
   "version": "1.0.0",
-  "description": "A URL shortener service",
   "scripts": {
     "dev": "concurrently \"npm run server:dev\" \"npm run client:dev\"",
     "server:dev": "cd server && npm run dev",
     "client:dev": "cd client && npm run dev",
-    "build": "cd client && npm run build",
+    "build": "npm run client:build",
+    "client:build": "cd client && npm run build",
     "start": "cd server && npm start",
     "install-all": "npm install && cd server && npm install && cd ../client && npm install"
   },
