--- a/vercel.json
+++ b/vercel.json
@@ -16,14 +16,20 @@
   "routes": [
     {
       "src": "/api/(.*)",
+      "dest": "/server/server.js",
+      "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS", "HEAD"]
+    },
+    {
+      "src": "/healthz",
+      "dest": "/server/server.js"
+    },
+    {
+      "src": "/([a-zA-Z0-9-_]+)",
       "dest": "/server/server.js"
     },
     {
       "src": "/(.*)",
       "dest": "/client/dist/$1"
     }
-  ],
-  "env": {
-    "NODE_ENV": "production"
-  }
+  ]
 }
